--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/tools/area-new.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/tools/area-new.vm
@@ -6,7 +6,7 @@
     <title>#t('layout.title.constructor')</title>
 </head>
     #set($siteRoute='/tools/area')
-<body>
+<body class="style-constructor">
     #parse('_layout-basic-header.vm')
 <div class="container">
     <form id="form" method="post" class="form-horizontal form-tools-area-new">
@@ -27,36 +27,41 @@
                 </select>
             </div>
         </div>
-        <div class="geometry-kind-options" data-geometry="plain" style="padding-left: 80px;">
-            <div>
-                <div class="control-group">
-                    <label class="control-label">#t('page.constructor.newArea.form.geometry_plane.axisX')</label>
+        <div class="row-fluid">
+            <div class="span7">
+                <div class="geometry-kind-options" data-geometry="PLANE">
+                    <div class="control-group">
+                        <label class="control-label">#t('page.constructor.newArea.form.geometry_plane.axisX')</label>
 
-                    <div class="controls">
-                        <label class="ux-radio pull-left area-geometry-plain-axisX value-left">
-                            <input type="radio" name="geometryPlain.axisX" value="LEFT">
-                            <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisX.left')</span>
-                        </label>
-                        <label class="ux-radio pull-left area-geometry-plain-axisX value-right">
-                            <input type="radio" name="geometryPlain.axisX" value="RIGHT" checked="checked">
-                            <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisX.right')</span>
-                        </label>
+                        <div class="controls">
+                            <label class="ux-radio pull-left area-geometry-plain-axisX value-left">
+                                <input type="radio" name="geometryPlain.axisX" value="LEFT">
+                                <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisX.left')</span>
+                            </label>
+                            <label class="ux-radio pull-left area-geometry-plain-axisX value-right">
+                                <input type="radio" name="geometryPlain.axisX" value="RIGHT" checked="checked">
+                                <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisX.right')</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label">#t('page.constructor.newArea.form.geometry_plane.axisY')</label>
+
+                        <div class="controls">
+                            <label class="ux-radio pull-left area-geometry-plain-axisY value-up">
+                                <input type="radio" name="geometryPlain.axisY" value="UP">
+                                <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisY.up')</span>
+                            </label>
+                            <label class="ux-radio pull-left area-geometry-plain-axisY value-down">
+                                <input type="radio" name="geometryPlain.axisY" value="DOWN" checked="checked">
+                                <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisY.down')</span>
+                            </label>
+                        </div>
                     </div>
                 </div>
-                <div class="control-group">
-                    <label class="control-label">#t('page.constructor.newArea.form.geometry_plane.axisY')</label>
-
-                    <div class="controls">
-                        <label class="ux-radio pull-left area-geometry-plain-axisY value-up">
-                            <input type="radio" name="geometryPlain.axisY" value="UP">
-                            <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisY.up')</span>
-                        </label>
-                        <label class="ux-radio pull-left area-geometry-plain-axisY value-down">
-                            <input type="radio" name="geometryPlain.axisY" value="DOWN" checked="checked">
-                            <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisY.down')</span>
-                        </label>
-                    </div>
-                </div>
+            </div>
+            <div class="span5">
+                <div class="geometry-kind-options-preview"></div>
             </div>
         </div>
         <div class="control-group">
@@ -66,10 +71,31 @@
         </div>
     </form>
     <script type="text/javascript">
-
         (function () {
-            var form = $('#form');
-            form.ajaxForm(A.ajaxFormController());
+            var form = $('#form'),
+                    formVersion = 1,
+                    previewPane = form.find('.geometry-kind-options-preview');
+
+            function updateGeometryPreview() {
+                var version = ++formVersion;
+                previewPane.addClass("updating");
+
+                form.clone()
+                        .append($('<input>', { name: "_intent", value: "preview"}))
+                        .ajaxSubmit(function (data) {
+                            if (version != formVersion) {
+                                return;
+                            }
+                            previewPane.empty()
+                                    .append($(data))
+                                    .removeClass("updating");
+                        });
+            }
+
+            form
+                    .ajaxForm(A.ajaxFormController())
+                    .find('input, select').change(updateGeometryPreview);
+            $(updateGeometryPreview);
         })();
     </script>
 </div>
